# iiSM-SW_public

PolySample/: .gitignore  form.ui  ui_form.py  widget.py
SIMP/: CMakeLists.txt  PixelFormatType.h  ZoomFactorType.h  constants.h  dialog_brightness_contrast.cpp  dialog_brightness_contrast.ui  dialog_contrast_curve.cpp  dialog_contrast_curve.ui  dialog_curve_point.h  dialog_image_curve.cpp  dialog_image_curve.ui  dialog_record_option.cpp  dialog_record_option.ui  dialog_stress.cpp  dialog_stress.ui  dialog_stretch_contrast.cpp  dialog_stretch_contrast.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.aps
SIMP/config/: config.xml
SIMP/include/: constants.h  curve_point.h  custom_chart_view.h  custom_graphics_view.h  customgraphicsview.h  customplaintextedit.h  dialog_brightness_contrast.h  dialog_contrast_curve.h  dialog_curve_point.h  dialog_image_curve.h  dialog_image_processing.h  dialog_record_option.h  dialog_stress.h  dialog_stretch_contrast.h  frm_brightness_contrast.h  mainwindow.h  pixel_format_type.h  preset_brightness_contrast.h  preset_contrast_curve.h  preset_curve.h  preset_image_processing.h  preset_point.h  preset_stress.h  simp_const_format.h  simp_const_key.h  simp_const_menu.h  simp_const_path.h  simp_const_value.h  simp_gegl.h  simp_logger.h  simp_util.h  tab_camera.h  tab_frame.h  tab_video.h  utils.h  video_converter.cpp  video_converter.h  video_encoder_type.h  video_format_type.h  video_loader.h  (+5 more)
SIMP/lib/: miicam.lib
SIMP/source/: custom_chart_view.cpp  custom_graphics_view.cpp  custom_plain_text_edit.cpp  customgraphicsview.cpp  customplaintextedit.cpp  frm_brightness_contrast.cpp  main.cpp  simp_const_format.cpp  simp_const_key.cpp  simp_const_menu.cpp  simp_const_path.cpp  simp_gegl.cpp  simp_logger.cpp  simp_util.cpp  utils.cpp  video_converter.cpp  video_loader.cpp  videoloader.cpp  worker_frame_processing.cpp  worker_video_loading.cpp  worker_video_processing.cpp  worker_video_writing_cv.cpp  worker_video_writing_qimage.cpp
SIMP/ui/: dialog_brightness_contrast.cpp  dialog_brightness_contrast.ui  dialog_contrast_curve.cpp  dialog_contrast_curve.ui  dialog_curve_point.cpp  dialog_curve_point.ui  dialog_image_processing.cpp  dialog_image_processing.ui  dialog_record_option.cpp  dialog_record_option.ui  dialog_stress.cpp  dialog_stress.ui  dialog_stretch_contrast.cpp  dialog_stretch_contrast.ui  frm_brightness_contrast.ui  mainwindow.cpp  mainwindow.ui  tab_camera.cpp  tab_camera.ui  tab_frame.cpp  tab_frame.ui  tab_video.cpp  tab_video.ui
SlPicoSample/: SlPicoSample.pyproject  form.ui  sc_const_code.py  sc_const_message.py  sc_const_setting.py  sc_error_type.py  sc_laser_type.py  sc_port.py  sc_port_wrapper.py  sc_status_type.py  slpicosample.py  slpicosample.spec  ui_form.py
